@@ -111,6 +111,7 @@ interaction.choice_delay 3
 # $F  all current buffer filepaths, space-separated
 # $i  get a string from user input
 # $c  temp file containing current clipboard text
+# $k  temp file containing current klipper (KDE clipboard) text
 # $s  temp file containing currently selected text
 
 key left;cursorLeft
